Added content to cold_coffee.html
Added ingredients and steps for the recipe.

--- a/recipes/cold_coffee.html
+++ b/recipes/cold_coffee.html
@@ -8,5 +8,36 @@
 </head>
 <body>
     <h1>A Recipe for Cold Coffee.</h1>
+    <img src="../images/cold_coffee.jpg" alt="Frothy cold coffee with a straw in it.">
+    <h2>Ingredients</h2>
+    <ul>
+        <li>1 tablespoon instant coffee</li>
+        <li>¼ cup warm water</li>
+        <li>3 to 4 tablespoon raw sugar</li>
+        <li>2 cups whole milk</li>
+        <li>6 to 8 ice cubes</li>
+    </ul>
+    <h2>Steps</h2>
+    <h3>Make Coffee Mixture</h3>
+    <ul>
+        <li>Firstly, add 1 tablespoon of instant coffee to a bowl. If using brewed filter coffee or espresso you can add ¼ cup directly to the blender jar as shown in step 3 below.</li>
+        <li>Add ¼ cup of warm water (not hot) to the instant coffee. Stir and mix very well.</li>
+    </ul>
+    <h3>Blend Coffee Concoction</h3>
+    <ul>
+        <li>Add the coffee solution to a blender jar.</li>
+        <li>Next add 3 to 4 tablespoons of sugar.</li>
+        <li>Blend for a minute or until the coffee solution becomes frothy and the color fades to a lighter shade of brown.</li>
+    </ul>
+    <h3>Make Iced Cold Coffee</h3>
+    <ul>
+        <li>Add 6 or 7 ice cubes. For a thicker blended cold coffee use just 2 to 4 cubes of ice.</li>
+        <li>Then pour in 2 cups of cold or chilled milk. To make this recipe, I used whole milk. See FAQs below for low fat cold coffee tips.</li>
+        <li>Blend once for again just a few seconds, until everything is mixed well and you get a nice frothy and foamy layer on top.</li>
+        <li>Pour into tall glasses and serve cold coffee immediately. The frothy top layer will settle into the beverage as it sits, so it’s best to enjoy blended iced coffee right away.</li>
+
+    </ul>
+
+
 </body>
 </html>
