--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/cold_coffee.html">Cold Coffee Recipe</a>
+    <ul>
+        <li><a href="./recipes/cold_coffee.html">Cold Coffee Recipe</a></li>
+        <li><a href="./recipes/hamburger.html">Hamburger Recipe</a></li>
+        <li><a href="./recipes/jollof_rice.html">Jollof Rice Recipe</a></li>
+    </ul>
 </body>
 </html>
