--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
-<body>
+<body">
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="./recipes/cold_coffee.html">Cold Coffee Recipe</a></li>
-        <li><a href="./recipes/hamburger.html">Hamburger Recipe</a></li>
-        <li><a href="./recipes/jollof_rice.html">Jollof Rice Recipe</a></li>
+        <li class="list-item"><a href="./recipes/cold_coffee.html">Cold Coffee Recipe</a></li>
+        <li class="list-item"><a href="./recipes/hamburger.html">Hamburger Recipe</a></li>
+        <li class="list-item"><a href="./recipes/jollof_rice.html">Jollof Rice Recipe</a></li>
     </ul>
 </body>
 </html>
