--- a/recipes/cold_coffee.html
+++ b/recipes/cold_coffee.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/styles_cold_coffee.css">
     <title>Cold Coffee Recipe</title>
 </head>
 <body>
-    <h1>A Recipe for Cold Coffee.</h1>
-    <img src="../images/cold_coffee.jpg" alt="Frothy cold coffee with a straw in it.">
+    <h1 class="text_centre">A Recipe for Cold Coffee.</h1>
+    <img class="image_centre", src="../images/cold_coffee.jpg" alt="Frothy cold coffee with a straw in it.">
     <h2>Ingredients</h2>
     <ul>
         <li>1 tablespoon instant coffee</li>
