--- a/recipes/hamburger.html
+++ b/recipes/hamburger.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/styles_hamburger.css">
     <title>Hamburger Recipe</title>
 </head>
 <body>
     <h1>A Recipe for Hamburger.</h1>
-    <img src="../images/hamburger.jpg" alt="Delicious hamburger with melted cheese.">
+    <img class="image_centre" src="../images/hamburger.jpg" alt="Delicious hamburger with melted cheese.">
     <h2>Ingredients</h2>
     <ul>
         <li>1 ½ pounds lean ground beef</li>
