--- a/recipes/jollof_rice.html
+++ b/recipes/jollof_rice.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/styles_jollof_rice.css">
     <title>Jollof Rice Recipe</title>
 </head>
 <body>
     <h1>A Recipe for Jollof Rice.</h1>
-    <img src="../images/jollof_rice.jpg" alt="Delicious hamburger with melted cheese.">
+    <img class="image_centre" src="../images/jollof_rice.jpg" alt="Delicious hamburger with melted cheese.">
     <h2>Ingredients</h2>
     <h3>Tomato Sauce:</h3>
     <ul>
